<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">HH_Mock</string>
    <string name="Login">Вход в личный кабинет</string>
    <string name="SearchWork">Поиск работы</string>
    <string name="Search">Поиск</string>
    <string name="Continue">Продолжить</string>
    <string name="LoginWithPassword">Войти с паролем</string>
    <string name="SearchEmployer">Поиск сотрудников</string>
    <string name="AccessToBase">Размещение вакансий и доступ к базе резюме</string>
    <string name="LookingForEmployees">Я ищу сотрудников</string>
    <string name="SentCodeToEmail">Отправили код на %1$s</string>
    <string name="VerifyInfo">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="Confirm">Подтвердить</string>
    <string name="EmailError">Напишите электронное письмо</string>
    <string name="FieldNotFilled">Поле не заполнено</string>
    <string name="Raise">Поднять</string>
    <string name="NumberOfCandidates">Сейчас просматривает %1$d человек</string>
    <string name="ExperiencedYears">Опыт от %1$d года до %1$d лет</string>
    <string name="ReleasedDate">Опубликовано %1$d %1$s</string>
    <string name="Reply">Откликнуться</string>
    <string name="MoreVacancies">Еще %1$d вакансии</string>
    <string name="VacanciesForYou">Вакансии для вас</string>
    <string name="VacanciesNearYou">Вакансии рядом с вами</string>
    <string name="RaiseResume">Поднять резюме в поиске</string>
    <string name="TemporaryWork">Временная работа и подработка</string>
    <string name="UsefulAdvice">Полезные статьи и советы</string>
    <string name="YourResponsibility">Ваши задачи</string>
    <string name="AskQuestion">Задайте вопрос работодателю</string>
    <string name="EmployerAnswer">Он получит его с откликом на вакансию</string>
    <string name="AppliedNumbers">%1$d человек уже откликнулись</string>
    <string name="LookingNumbers">%1$d человека сейчас смотрят</string>
    <string name="RequiredExperience">Требуемый %1$s</string>
    <string name="tempString">-Проектировать пользовательский опыт, проводить UX исследования; -Разрабатывать адаптивный дизайн интерфейса для мобильных приложений; -Разрабатывать быстрые прототипы для тестирования идеи дизайна и их последующая; интеграция на основе обратной связи от команды и пользователей; -Взаимодействовать с командой разработчиков для обеспечения точной реализации ваших дизайнов; -Анализ пользовательского опыта и адаптация под тренды.</string>
    <string name="ResumeForReply">Резюме для отклика</string>
    <string name="AddCoverLetter">Добавить сопроводительное</string>
    <string name="YourCoverLetter">Ваше сопроводительное письмо</string>
    <string name="Favorite">Избранное</string>
    <string name="Replies">Отклики</string>
    <string name="Messages">Сообщения</string>
    <string name="Profile">Профиль</string>
    <string name="RepliedVacancies">%1$d вакансия</string>
</resources>