<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_search_main"
        android:title="@string/Search" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/Favorite" />

    <item
        android:id="@+id/repliesFragment"
        android:icon="@drawable/ic_message"
        android:title="@string/Replies" />

    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/Messages" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/Profile" />

</menu>