<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:fillViewport="true"
    android:overScrollMode="never"
    tools:context=".ui.detailed_vacancy.adapter.DetailedVacancyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/DefaultMarginSize"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_back" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/ivWatched"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_eye" />

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_share" />

            <ImageView
                android:id="@+id/ivFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_favorite" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ssf_pro_display_medium"
            tools:text="UI/UX Designer"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/sf_pro_display_regular"
            tools:text="Уровень дохода не указан"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvExperience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            tools:text="Требуемый опыт: от 1 года до 3 лет"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/VacanciesForYou"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_green"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvAppliedNumbers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="visible"
                    tools:text="147 человек уже откликнулись" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/bg_oval_light_green"
                    android:padding="4dp"
                    android:src="@drawable/ic_candidate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_rectangle_green"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvLookingNumbers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="visible"
                    tools:text="2 человека сейчас смотрят" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/bg_oval_light_green"
                    android:padding="4dp"
                    android:src="@drawable/ic_eye" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_dark_grey"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/DefaultMarginSize"
            android:paddingVertical="12dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="Еком дизайн" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_checked" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:src="@drawable/img_map" />

            <TextView
                android:id="@+id/tvExactAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Опубликовано 16 февраля" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/DefaultMarginSize"
            android:textSize="14sp"
            tools:text="Опубликовано 16 февраля" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ssf_pro_display_medium"
            android:text="@string/YourResponsibility"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvResponsibilityList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ssf_pro_display_medium"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="@string/tempString" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ssf_pro_display_medium"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:text="@string/AskQuestion" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ssf_pro_display_medium"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:text="@string/EmployerAnswer" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuestionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_question_list"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/tvBtnReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_button_green_8"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/Reply"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>